# LearnSystemC-Discussion

./: README.md
01_hello_world/: CMakeLists.txt  main.cpp
02_virtual_platform/: CMakeLists.txt  main.cpp
03_modules_processes/: CMakeLists.txt  main.cpp
04_ports_signals/: CMakeLists.txt  main.cpp
05_tlm_basics/: CMakeLists.txt  main.cpp
06_cci_config/: CMakeLists.txt  main.cpp
07_systemc_ams/: CMakeLists.txt  main.cpp
08_uvm_systemc/: CMakeLists.txt  README.md  main.cpp
09_hls_subset/: CMakeLists.txt  README.md  main.cpp
